Fixes Nav Bars
The bar graphics now appear above and below the nav.

--- a/styles/style.less
+++ b/styles/style.less
@@ -97,7 +97,7 @@ nav.main-nav {
   max-width: 1180px;
   margin: 0 auto;
   div.menu-main-menu-container {
-    float: left;
+    /* float: left; */
     font-family: 'Roboto Condensed', sans-serif;
     a {
       border-bottom: none;
@@ -169,11 +169,12 @@ nav.main-nav {
         position: absolute;
         top: 0;
         left: 0;
-        background: #fff 10px 11px;
+        /*background: #fff 10px 11px;*/
         &>li {
           list-style-type: none;
           display: none; /* hide all <li> items */
           color: #555;
+          padding: 0;
           a {
             display: block;
             padding: 5px 5px 5px 32px;
@@ -235,19 +236,21 @@ nav.main-nav {
 div.menu-main-divider-top{
 	background-image:url(images/nav-lines-upper.png);
 	background-repeat:repeat-x;
-	height: 10px;
+	min-height: 10px;
+	max-width: 100%;
+  	margin: 0 auto;
+  	/* padding: 0 10px; */
+}
+
+div.menu-main-divider-bottom{
+	background-image:url(images/nav-lines-lower.png);
+	background-repeat:repeat-x;
+  background-position: bottom;
+	min-height: 3.5em;
 	max-width: 100%;
   	margin: 0 auto;
   	padding: 0 10px;
 }
-/*div.menu-main-divider-bottom{
-	background-image:url(images/nav-lines-lower.png);
-	background-repeat:repeat-x;
-	height: 10px;
-	max-width: 100%;
-  	margin: 0 auto;
-  	padding: 0 10px;
-}*/
 
 /******** .main styles **********/
 
